# sand

./: Cargo.toml  README.md
examples/sorter/: copro1.rs  copro2.rs  copro3.rs  interconnect.rs  main.rs  packet.rs  packet_gen.rs
src/: lib.rs  port.rs  ports.rs
src/macros/: .gitignore  Cargo.toml
src/macros/src/: connections.rs  entity.rs  lib.rs  ports.rs  way.rs
src/signals/: buffer.rs  fifo.rs  mod.rs  signal.rs
