[package]
name = "sand"
version = "0.1.0"
edition = "2021"
#autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
async-trait = "0.1.51"
futures = "0.3.17"
llhd = "0.16.0"
sand-macros = {path = "src/macros", version = "0.1.0"}
clap = "2"

[dev-dependencies]
rand = "0.8.4"
